# pool_log

./: CMakeLists.txt  LICENSE  README.md  README_zh.md
include/: pool_log.h
plugins/logging/: plugin.c  plugin.cmake  plugin.h
src/: pool_log.c
test/: CMakeLists.txt  test_pool_log.c
